deploy/ternal-no-pvc/gcs-standalone/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: ternal-goauthy
  namespace: ternal-auth
spec:
  ports:
    - $patch: replace
    - name: http
      port: 8080
      targetPort: http
