deploy/ternal-no-pvc/gcs-standalone/delete-resources.yaml
$patch: delete
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ternal-goauthy-ingress-and-peer
  namespace: ternal-auth
